--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   flutter_webview_plugin: ^0.3.10+1
-  bip32: ^1.0.5
-  bip39: ^1.0.3
+  bip32: 1.0.5
+  bip39: 1.0.3
   shared_preferences: ^0.5.3
   http: ^0.12.0+2
   barcode_scan: ^1.0.0
