--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.10+1
   bip32: 1.0.5
   bip39: 1.0.3
+  web3dart: ^1.2.0
   shared_preferences: ^0.5.3
   http: ^0.12.0+2
   barcode_scan: ^1.0.0
