--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   bip32: 1.0.5
   bip39: 1.0.3
   web3dart: ^1.2.0
+  bitcoin_flutter: ^2.0.2
   shared_preferences: ^0.5.3
   http: ^0.12.0+2
   barcode_scan: ^1.0.0
